deploy/assisted-installer-controller/assisted-installer-controller-nm.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: assisted-installer
  labels:
    security.openshift.io/scc.podSecurityLabelSync: "false"
    pod-security.kubernetes.io/enforce: "privileged"
    pod-security.kubernetes.io/audit: "privileged"
    pod-security.kubernetes.io/warn: "privileged"
