deploy/assisted-installer-controller/assisted-installer-controller-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: assisted-installer-network-policy
  namespace: assisted-installer
